[package]
name = "nexus-hft-core"
version = "0.1.0"
edition = "2021"
authors = ["Mahadev Mukherjee <nexus@growwithmahadev.com>"]
description = "Deterministic sub-millisecond execution engine for AWS Bare-Metal"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
crossbeam = "0.8"
core_affinity = "0.8" 
socket2 = "0.5" 
serde_json = "1.0"
rustc-hash = "1.1" 

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
